--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next",
     "start": "next start",
-    "build": "next build"
+    "build": "next build",
+    "tsc": "tsc"
   },
   "author": "Giorgi Adeishvili",
   "license": "ISC",
