--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "sourceMap": true,
         "skipLibCheck": true,
         "baseUrl": ".",
+        "outDir": "myOutDir",
         "lib": [
             "dom",
             "es2016"
